@@ -34,6 +34,7 @@
  </stability>
  <license uri="http://www.horde.org/licenses/gpl">GPL-2.0</license>
  <notes>
+* [jan] Fix setting default values for identity preferences.
 * [mms] Improve drag performance of elements in dynamic view.
 * [mms] Fix saving initial_page preference.
 * [mms] Workaround broken Thunderbird encrypted S/MIME messages.
@@ -2674,6 +2675,7 @@
    <date>2012-01-17</date>
    <license uri="http://www.horde.org/licenses/gpl">GPL-2.0</license>
    <notes>
+* [jan] Fix setting default values for identity preferences.
 * [mms] Improve drag performance of elements in dynamic view.
 * [mms] Fix saving initial_page preference.
 * [mms] Workaround broken Thunderbird encrypted S/MIME messages.
