@@ -3,5 +3,5 @@
 </div>
 
 <div class="fixed">
- <textarea id="signature_html" name="signature_html" rows="4" cols="80" class="fixed"></textarea>
+ <textarea id="signature_html" name="signature_html" rows="4" cols="80" class="fixed"><tag:signature /></textarea>
 </div>
