@@ -2,6 +2,7 @@
 v5.0.19-git
 -----------
 
+[jan] Fix setting default values for identity preferences.
 [mms] Improve drag performance of elements in dynamic view.
 [mms] Fix saving initial_page preference.
 [mms] Workaround broken Thunderbird encrypted S/MIME messages.
